<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cartItem"
        android:title="@string/menu_places_fragment_cart"
        app:actionLayout="@layout/menu_cart_layout"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bookingItem"
        android:title="@string/menu_places_fragment_booking"
        app:actionLayout="@layout/menu_booking_layout"
        app:showAsAction="always"/>

    <item
        android:id="@+id/filterItem"
        android:icon="@drawable/ic_filter_for_screen_all"
        android:title="@string/menu_places_fragment_filter"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/modeItem"
        android:icon="@drawable/ic_card_view"
        android:title="@string/menu_places_fragment_map"
        app:showAsAction="ifRoom"/>

</menu>