<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="net.caffee.places.ui.order.OrderSecondStepViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorGrayLight"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_first_block"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/float_act_top_view_height"
                    android:background="@color/colorWhite"
                    android:elevation="@dimen/size_2">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_1"
                        android:layout_marginEnd="@dimen/size_48"
                        android:layout_marginStart="@dimen/size_48"
                        android:layout_marginTop="@dimen/size_14"
                        android:background="@color/colorGreen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <View
                        android:layout_width="@dimen/size_12"
                        android:layout_height="@dimen/size_12"
                        android:layout_marginStart="@dimen/size_48"
                        android:layout_marginTop="@dimen/size_8"
                        android:background="@drawable/background_button_circle_green"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <View
                        android:layout_width="@dimen/size_12"
                        android:layout_height="@dimen/size_12"
                        android:layout_marginEnd="@dimen/size_48"
                        android:layout_marginTop="@dimen/size_8"
                        android:background="@drawable/background_button_circle_green"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        style="@style/OrderLabelTopSmallText"
                        android:layout_marginStart="@dimen/size_24"
                        android:text="@string/order_delivery"
                        android:textColor="@color/colorDarkGray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        style="@style/OrderLabelTopSmallText"
                        android:layout_marginEnd="@dimen/size_24"
                        android:text="@string/order_payment"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_second_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorWhite"
                    android:paddingBottom="@dimen/size_2">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/payment"
                        style="@style/OrderLabelGraySmallText"
                        android:text="@string/order_payment_"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/iv_wallet"
                        style="@style/OrderStepTwoPaymentBt"
                        android:layout_marginTop="@dimen/_4sdp"
                        app:layout_constraintEnd_toStartOf="@+id/iv_card"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/payment"
                        android:onClick="@{(v)-> viewModel.paymentClick(v)}"
                        app:stateChecked="@{viewModel.walletChecked}"
                        app:srcCompat="@drawable/ic_wallet_for_order_grey"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/iv_card"
                        style="@style/OrderStepTwoPaymentBt"
                        android:onClick="@{(v)-> viewModel.paymentClick(v)}"
                        app:stateChecked="@{viewModel.cardChecked}"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_wallet"
                        app:layout_constraintEnd_toStartOf="@+id/iv_cash"
                        app:layout_constraintStart_toEndOf="@+id/iv_wallet"
                        app:layout_constraintTop_toTopOf="@+id/iv_wallet"
                        app:srcCompat="@drawable/ic_cart_for_order_gray"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/iv_cash"
                        style="@style/OrderStepTwoPaymentBt"
                        android:onClick="@{(v)-> viewModel.paymentClick(v)}"
                        app:stateChecked="@{viewModel.cashChecked}"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_card"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_card"
                        app:layout_constraintTop_toTopOf="@+id/iv_card"
                        app:srcCompat="@drawable/ic_cash_for_order_gray"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_wallet"
                        style="@style/OrderLabelGraySmallText"
                        android:layout_marginStart="@dimen/size_0"
                        android:text="@string/order_wallet"
                        app:layout_constraintEnd_toEndOf="@+id/iv_wallet"
                        app:layout_constraintStart_toStartOf="@+id/iv_wallet"
                        app:layout_constraintTop_toBottomOf="@+id/iv_wallet"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_card"
                        style="@style/OrderLabelGraySmallText"
                        android:layout_marginStart="@dimen/size_0"
                        android:text="@string/order_card"
                        app:layout_constraintEnd_toEndOf="@+id/iv_card"
                        app:layout_constraintStart_toStartOf="@+id/iv_card"
                        app:layout_constraintTop_toBottomOf="@+id/iv_card"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_cash"
                        style="@style/OrderLabelGraySmallText"
                        android:layout_marginStart="@dimen/size_0"
                        android:text="@string/order_cash"
                        app:layout_constraintEnd_toEndOf="@+id/iv_cash"
                        app:layout_constraintStart_toStartOf="@+id/iv_cash"
                        app:layout_constraintTop_toBottomOf="@+id/iv_cash"/>

                    <View
                        android:id="@+id/divider"
                        android:layout_marginTop="@dimen/_8sdp"
                        style="@style/Divider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_wallet"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/add_comment_label"
                        style="@style/OrderLabelBlackText"
                        android:layout_marginTop="@dimen/size_8"
                        android:text="@string/order_add_comment"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_comment"
                        style="@style/OrderEditText"
                        android:padding="16dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_4"
                        android:gravity="top|start"
                        android:inputType="textMultiLine|textCapSentences"
                        android:maxLength="100"
                        android:maxLines="3"
                        android:scrollbars="none"
                        android:singleLine="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/add_comment_label"
                        tools:text="Хочу получить заказ сегодня в 21.45. Когда приедете - позвоните. Я выйду и заберу заказ."/>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_second_block_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorWhite"
                    android:paddingBottom="@dimen/size_8">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/cost_of"
                        style="@style/OrderLabelGraySmallText"
                        android:text="@string/order_value"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/cost_of_order"
                        style="@style/OrderLabelGrayText"
                        android:text="@string/order_value_of_order"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cost_of"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/delivery"
                        style="@style/OrderLabelGrayText"
                        android:text="@string/order_value_of_delivery"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cost_of_order"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/sum"
                        style="@style/OrderLabelGrayText"
                        android:text="@string/order_sum"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/delivery"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_cost_of_order"
                        style="@style/OrderCostBlackText"
                        tools:text="300 ₸"
                        bind:orderTotalPrice="@{viewModel.totalProductsPriceObs}"
                        app:layout_constraintBottom_toBottomOf="@+id/cost_of_order"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_delivery"
                        style="@style/OrderCostBlackText"
                        bind:orderTotalPrice="@{viewModel.deliveryPriceObs}"
                        tools:text="40 ₸"
                        app:layout_constraintBottom_toBottomOf="@+id/delivery"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_sum"
                        style="@style/OrderCostBlackText"
                        tools:text="340 ₸"
                        bind:orderTotalPrice="@{viewModel.totalPriceObs}"
                        app:layout_constraintBottom_toBottomOf="@+id/sum"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_next"
                style="@style/GrayText"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48"
                android:layout_marginBottom="@dimen/size_16"
                android:layout_marginEnd="@dimen/size_32"
                android:layout_marginStart="@dimen/size_32"
                android:background="@{viewModel.paymentIsChecked ? @drawable/background_button_menu_green : @drawable/background_button_dark_gray}"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/order_place_an_order"
                android:onClick="@{()-> viewModel.nextClick()}"
                android:clickable="@{viewModel.paymentIsChecked ? true : false}"
                android:textColor="@{viewModel.paymentIsChecked ? @color/colorWhite : @color/colorBlack}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>